# ShadowBoard

./: .coverage  .gitignore  CLAUDE.md  DELIVERY_CHECKLIST.md  README.md  import_times.txt  main.py  perf_check.py  pyproject.toml  quality_gate.ps1  quickstart.py  requirements.txt  run.bat  run.ps1  run_cli.bat  web_app.py
.github/workflows/: cd.yml  ci.yml
docs/: API-Reference.md  Architecture-Advanced.md  Architecture.md  Configuration.md  Development.md  FAQ.md  Home.md  Services.md  USER_GUIDE.md  Workflows.md
docs/archive/: DELIVERY_SUMMARY.md  ENTERPRISE_UPGRADE_SUMMARY.md
docs/enterprise/: 00_START_HERE.md  IMPLEMENTATION_GUIDE.md
examples/: quickstart.py
src/: __init__.py
src/core/: __init__.py  browser.py  config.py  dependencies.py  exceptions.py
src/core/auth/: __init__.py  auth_manager.py
src/core/browser/: __init__.py  browser_pool.py
src/core/resilience/: __init__.py  retry_policy.py
src/core/security/: __init__.py  (+1 more)
src/models/: __init__.py  history.py  session.py  task.py
src/services/: __init__.py  memory_store.py  monitor.py  task_tracker.py  workflow.py
src/ui/: __init__.py  app.py  state.py
src/utils/: __init__.py  cache.py  helpers.py
tests/: test_auth.py  test_auth_extended.py  test_authz.py  test_browser_integration.py  test_browser_mock.py  test_core_logic.py  test_gradio_ui.py  test_memory_store.py  test_monitor.py  test_perf_check.py  test_queue.py  test_resilience.py  test_security.py  test_task_tracker.py  test_ui_compatibility.py  test_ui_logic.py  test_utils.py  test_web_app_events.py  test_workflow.py
(+11 files in other folders)
